include/web/request/errors.txt
g++ -std=c++23 -fPIC -c /home/ahethesham/agent/include/web/request/impl/http_request_line_v1.cc -I/home/ahethesham/agent/include/Logger/ -I/home/ahethesham/agent/include/builder/http/ -I/home/ahethesham/agent/include/config/ -I/home/ahethesham/agent/include/formatter/ -I/home/ahethesham/agent/include/json/ -I/home/ahethesham/agent/include/stream/ -I/home/ahethesham/agent/include/stream/io_handle/ -I/home/ahethesham/agent/include/token/ -I/home/ahethesham/agent/include/web/ -I/home/ahethesham/agent/include/web/acceptor/ -I/home/ahethesham/agent/include/web/binder/ -I/home/ahethesham/agent/include/web/client/ -I/home/ahethesham/agent/include/web/connector/ -I/home/ahethesham/agent/include/web/endpoint/ -I/home/ahethesham/agent/include/web/listener/ -I/home/ahethesham/agent/include/web/request/ -I/home/ahethesham/agent/include/web/request/http/ -I/home/ahethesham/agent/include/web/response/ -I/home/ahethesham/agent/include/web/server/ -I/home/ahethesham/agent/include/web/socket/ -o /home/ahethesham/agent/include/web/request/build/http_request_line_v1.o
In file included from /home/ahethesham/agent/include/web/request/impl/http_request_line_v1.cc:1:
/home/ahethesham/agent/include/web/request/http_request_line_v1.h:19:37: error: ‘std::vector’ has not been declared
   19 |         self_type & set_query_param(std::vector<std::pair<std::string , std::string > > & params);
      |                                     ^~~
/home/ahethesham/agent/include/web/request/http_request_line_v1.h:19:48: error: expected ‘,’ or ‘...’ before ‘<’ token
   19 |         self_type & set_query_param(std::vector<std::pair<std::string , std::string > > & params);
      |                                                ^
make: *** [makefile:32: /home/ahethesham/agent/include/web/request/build/http_request_line_v1.o] Error 1
